--- a/_includes/events.html
+++ b/_includes/events.html
@@ -1,6 +1,25 @@
 <div class="row">
   <div class="col-sm-12 text-center margin-bottom-4">
     <h2 class="margin-bottom-4 margin-top-0">Upcoming Events</h2>
+    {% for event in site.events %}
+      <div class="col-xs-12 col-md-4" style="margin-bottom: 1em;">
+        <div class="card">
+          <figure>
+            <img src="{{ event.image }}">
+          </figure>
+          <div class="copy-holder">
+            <h3>{{ event.title }}</h3>
+            <div class="desc">
+              <p>{{ event.date }}</p>
+              <p>{{ event.venue }}</p>
+            </div>
+            <p>
+            <a target="_blank" href="{{ event.url }}" class="btn btn-donate">Learn More</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    {% endfor %}
   </div>
 <div class="row">
   <div class="col-sm-12 text-center margin-bottom-4">
