--- a/_includes/head.html
+++ b/_includes/head.html
@@ -67,4 +67,7 @@
   <script src="{{ "/assets/js/modernizr.min.js" | prepend: site.baseurl }}"></script>
   <script src="{{ "/assets/bootstrap/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
   <script src='//cdn.optimizely.com/js/1995751339.js'></script>
+
+  <!-- Gallery -->
+  <link rel="stylesheet" href="{{ "/assets/css/blueimp-gallery.min.css" | prepend: site.baseurl }}">
 </head>
