--- a/_sass/_programs.scss
+++ b/_sass/_programs.scss
@@ -18,3 +18,20 @@ body.programs {
     }
   }
 }
+
+// On homepage.
+.featured-programs {
+  p.intro {
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 22px;
+    font-size: 2.2rem;
+  }
+  .card {
+    img {
+      max-height: 200px;
+      min-height: 200px;
+      overflow: hidden;
+    }
+  }
+}
